--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,10 +1,10 @@
-environment:
-  nodejs_version: "18"
+image: Ubuntu1804  # образ для сборки
+
+stack: node 10  # окружение
 
 branches:
   only:
     - master  # ветка git
-    - main
 
 cache: node_modules  # кеширование
 
@@ -18,3 +18,10 @@ build_script:
 
 test_script:
   - npm run lint && npm test  # скрипт тестирования
+
+deploy_script:  # скрипт развёртывания
+  - git config --global credential.helper store
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
