--- a/package.json
+++ b/package.json
@@ -18,23 +18,27 @@
   "author": "Rysaev Damir <freepad@ya.ru>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.5.5",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.50.0",
-    "eslint-plugin-jest": "^27.4.2",
+    "css-loader": "^6.7.2",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.1.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "jest": "^29.7.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
     "live-server": "^1.2.2",
-    "mini-css-extract-plugin": "^2.8.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "prettier": "2.7.1",
     "style-loader": "^3.3.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
